Final fix: Universal binding 0.0.0.0 and explicit CORS origins